<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:letterSpacing="0.03"
        android:text="Join and protect your privacy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="email"
        android:hint="@string/user"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:autofillHints="email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="Sign Up"
        android:textColor="#fff"
        android:textSize="15sp" />


</LinearLayout>